--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: localhost
   gather_facts: false
   become: true
   become_method: sudo
@@ -21,12 +21,14 @@
             - git
             - ansible
   - name: ClenUP application directory
-    shell: rm -rf /app
-    warn: False
+    file:
+      path: /app/
+      state: absent
 
   - name: create catalog
-    command: mkdir /app
-    warn: False
+    file:
+      path: /app/
+      state: directory
 
   - name: Git clone
     git:
