--- a/playbook.yml
+++ b/playbook.yml
@@ -1,11 +1,25 @@
 ---
-- hosts: localhost
+- hosts: all
   gather_facts: false
   become: true
   become_method: sudo
   become_user: root
 
   tasks:
+
+
+
+  - name: Get zabbix
+      get_url:
+        url: http://repo.zabbix.com/zabbix/3.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_3.4-1%2Bbionic_all.deb
+        dest: /tmp
+      when: my_package_check_deb.rc == 1
+      register: out
+
+  - name: Setup zabbix repo
+    apt: deb="/tmp/zabbix-release_3.4-1%2Bbionic_all.deb"
+    when: my_package_check_deb.rc == 1
+    register: out
 
   - name: apt update
     command: apt -y update
@@ -19,7 +33,9 @@
             - docker
             - docker-compose
             - git
+            - python
             - ansible
+            - zabbix-agent
     register: out
 
   - name: CleanUP application directory
@@ -47,6 +63,10 @@
       cd /app/prod &&
       docker-compose build
     register: out
+
+
+
+
 
   - debug: msg="{{ out.stdout }}"
   - debug: msg="{{ out.stdout }}"
