created files:   packer   playbook

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,9 +1,16 @@
 ---
-- hosts: all
+- hosts: default
   gather_facts: false
   become: true
   become_method: sudo
   become_user: root
+
+  pre_tasks:
+    - name: Install python for Ansible
+      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+      register: out
+      changed_when: output.stdout != ""
+
 
   tasks:
     - name: apt update
