--- a/playbook.yml
+++ b/playbook.yml
@@ -29,9 +29,13 @@
           - wget
       register: out
 
+    - name: apt update
+        command: apt -y update
+        register: out
+
     - name: Get zabbix
       get_url:
-        url: https://repo.zabbix.com/zabbix/4.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_4.0-2+bionic_all.deb
+        url: 'https://repo.zabbix.com/zabbix/4.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_4.0-2+bionic_all.deb'
         dest: /tmp
       register: out
 
