created files:   packer   playbook

--- a/zabbix_playbook.yml
+++ b/zabbix_playbook.yml
@@ -45,5 +45,5 @@
       line: 'TLSPSKIdentity=753159852456'
 
 
-  - name: Starting the Zabbix Agent
-    service: name=zabbix-agent state=started enabled=yes
+  - name: restart zabbix-agent
+    service: name=zabbix-agent state=restarted
