created files:   packer   playbook

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,15 +1,7 @@
 ---
-- hosts: localhost
+- hosts: default:packer
   gather_facts: false
   become: true
-  become_method: sudo
-  become_user: root
-
-  pre_tasks:
-    - name: Install python for Ansible
-      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
-      register: out
-
 
   tasks:
     - name: apt update
