--- a/playbook.yml
+++ b/playbook.yml
@@ -66,7 +66,11 @@
         docker-compose pull
       register: out
 
+    - name: Start second playbook
+      script: /app/zabbix_playbook.yml
+      args:
+        executable: ansible
+
     - debug: msg="{{ out.stdout }}"
     - debug: msg="{{ out.stdout }}"
 
-- import_playbook: zabbix_playbook.yml
